[project]
name = "gymly"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "apscheduler==3.11.2",
    "bcrypt==4.1.3",
    "black==24.4.2",
    "certifi==2024.2.2",
    "click==8.1.7",
    "dnspython==2.6.1",
    "email-validator==2.1.1",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.3",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "isort==5.13.2",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "orjson==3.10.3",
    "packaging==24.0",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "platformdirs==4.2.2",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-core==2.18.2",
    "pydantic-settings==2.2.1",
    "pygments==2.18.0",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.30",
    "starlette==0.37.2",
    "structlog==24.1.0",
    "typer==0.12.3",
    "typing-extensions==4.11.0",
    "ujson==5.10.0",
    "uvicorn==0.29.0",
    "watchfiles==0.21.0",
    "websockets==12.0",
]
